tests/common/snapshots/bmp__common__tests__bmp.rs-12-5_file_map.snap
---
source: tests/common/mod.rs
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 186
  name: bmp
  confidence: 128
  description: "BMP image, total size: 186"
  always_display: false
  extraction_declined: false
