tests/common/snapshots/bmp__common__tests__bmp.rs-12-5_ordered_extractions.snap
---
source: tests/common/mod.rs
expression: ordered_extractions
---
- size: 186
  success: true
  extractor: bmp_built_in
  do_not_recurse: true
  output_directory: "[output_directory]"
