tests/common/snapshots/bmp__common__tests__bmp.rs-30-5_ordered_extractions.snap
---
source: tests/common/mod.rs
assertion_line: 77
expression: ordered_extractions
---
- size: 186
  success: true
  extractor: bmp_built_in
  do_not_recurse: true
  output_directory: "[output_directory]"
- size: 186
  success: true
  extractor: bmp_built_in
  do_not_recurse: true
  output_directory: "[output_directory]"
